--- a/profile.html
+++ b/profile.html
@@ -27,7 +27,7 @@
     <!-- Kylie Jenner -->
 <article class="profile-card">
   <div class="profile-left">
-    <img class="avatar" src="celeb/Kylie.webp" alt="Kylie Jenner avatar">
+    <img class="avatar" src="04.jpeg" alt="Kylie Jenner avatar">
     <div style="font-size:.9rem;color:var(--muted)">Badge:</div>
     <img src="images/badge.jpg" alt="badge" style="width:40px;border-radius:8px">
   </div>
@@ -51,7 +51,7 @@
 <!-- Cristiano Ronaldo -->
 <article class="profile-card">
   <div class="profile-left">
-    <img class="avatar" src="celeb/cristiano.webp" alt="Cristiano Ronaldo avatar">
+    <img class="avatar" src="05.jpeg" alt="Cristiano Ronaldo avatar">
     <div style="font-size:.9rem;color:var(--muted)">Badge:</div>
     <img src="images/badge.jpg" alt="badge" style="width:40px;border-radius:8px">
   </div>
@@ -75,7 +75,7 @@
 <!-- Lionel Messi -->
 <article class="profile-card">
   <div class="profile-left">
-    <img class="avatar" src="celeb/leo.webp" alt="Lionel Messi avatar">
+    <img class="avatar" src="06.jpg" alt="Lionel Messi avatar">
     <div style="font-size:.9rem;color:var(--muted)">Badge:</div>
     <img src="images/badge.jpg" alt="badge" style="width:40px;border-radius:8px">
   </div>
@@ -166,4 +166,5 @@
   <script src="profile.js" defer></script>
 </body>
 </html>
+
 
