--- a/profile.html
+++ b/profile.html
@@ -29,7 +29,7 @@
   <div class="profile-left">
     <img class="avatar" src="04.jpeg" alt="Kylie Jenner avatar">
     <div style="font-size:.9rem;color:var(--muted)">Badge:</div>
-    <img src="images/badge.jpg" alt="badge" style="width:40px;border-radius:8px">
+    <img src="06.jpg" alt="badge" style="width:40px;border-radius:8px">
   </div>
 
   <div class="profile-right">
@@ -53,7 +53,7 @@
   <div class="profile-left">
     <img class="avatar" src="05.jpeg" alt="Cristiano Ronaldo avatar">
     <div style="font-size:.9rem;color:var(--muted)">Badge:</div>
-    <img src="images/badge.jpg" alt="badge" style="width:40px;border-radius:8px">
+    <img src="06.jpg" alt="badge" style="width:40px;border-radius:8px">
   </div>
 
   <div class="profile-right">
@@ -77,7 +77,7 @@
   <div class="profile-left">
     <img class="avatar" src="06.jpg" alt="Lionel Messi avatar">
     <div style="font-size:.9rem;color:var(--muted)">Badge:</div>
-    <img src="images/badge.jpg" alt="badge" style="width:40px;border-radius:8px">
+    <img src="06.jpg" alt="badge" style="width:40px;border-radius:8px">
   </div>
 
   <div class="profile-right">
@@ -166,5 +166,6 @@
   <script src="profile.js" defer></script>
 </body>
 </html>
+
 
 
