--- a/philosophy.html
+++ b/philosophy.html
@@ -19,39 +19,88 @@
   </header>
 
   <main class="container">
-    <h2>Why We Chose These Colours</h2>
-    <p class="lead">Blue, white and an accent green — colors chosen to communicate trust, transparency and growth.</p>
+    <h2>Behind the Design – The Credify Story</h2>
+    
+    <h3 style="margin-top:18px;color:var(--primary)">The Idea</h3>
+    <p style="color:var(--muted)">In today’s digital economy, credibility is currency. Brands want to know exactly which creators they can trust, and creators want to prove their worth in a way that is measurable and recognised. Credify bridges this gap by calculating a Social Credibility Score based on real engagement, content quality, and authenticity — and making it visible to both creators and brands.</p>
 
-    <div style="text-align:left;max-width:900px;margin:12px auto">
-      <img src="images/palette.png" alt="colour palette" style="max-width:100%;border-radius:12px;margin-bottom:12px">
-      <h4 style="color:var(--primary)">Blue — Trust</h4>
-      <p style="color:var(--muted)">Represents trust, stability and reliability — the foundation of our scoring system.</p>
+    <h3 style="margin-top:18px;color:var(--primary)">Why We Designed the Website This Way</h3>
+    <p style="color:var(--muted)">Every element of our site is intentional. Our design goals were:</p>
+    <ul style="color:var(--muted);margin-left:18px">
+      <li>Minimalist Layout – We want users to focus on their score and insights, not be distracted by clutter.</li>
+      <li>Clean Typography & Plenty of White Space – Easier reading, more trust.</li>
+      <li>Interactive Transparency – Hover effects and tooltips explain each metric without overloading the page.</li>
+      <li>Data-First Design – Badges, charts, and progress bars make credibility tangible.</li>
+    </ul>
 
-      <h4 style="color:var(--primary)">White — Transparency</h4>
-      <p style="color:var(--muted)">Symbolizes openness — every score can be traced to verifiable data.</p>
+    <h3 style="margin-top:18px;color:var(--primary)">Our Colour Theme</h3>
+    <p style="color:var(--muted)">Our colours aren’t just for looks — they communicate what we stand for:</p>
+    <ul style="color:var(--muted);margin-left:18px">
+      <li>Blue – Trust, stability, reliability — the foundation of our credibility scoring system.</li>
+      <li>White – Transparency and openness — every score is backed by verifiable data.</li>
+      <li>Green Accents – Growth and opportunity — representing the collaborations and brand deals our users can achieve.</li>
+    </ul>
+    <p style="color:var(--muted)">We avoided overly bright or chaotic palettes because credibility is built on clarity and confidence, not noise.</p>
 
-      <h4 style="color:var(--primary)">Green — Growth</h4>
-      <p style="color:var(--muted)">Signals growth & opportunity — collaborations users unlock.</p>
+    <h3 style="margin-top:18px;color:var(--primary)">Our Logo</h3>
+    <p style="color:var(--muted)">Our logo tells a story:</p>
+    <ul style="color:var(--muted);margin-left:18px">
+      <li>The segmented circular ring represents measurement, progress, and the range of credibility from low to high.</li>
+      <li>The gradient shift (red/orange to green) visualises improvement — every creator can move upward with authentic engagement.</li>
+      <li>The green “CREDIFY” text symbolises the ultimate goal: growth built on trust.</li>
+    </ul>
 
-      <h3 style="margin-top:18px;color:var(--primary)">Why We Designed the Website This Way</h3>
-      <ul style="color:var(--muted);margin-left:18px">
-        <li>Minimalist Layout — focus on the score, not the noise.</li>
-        <li>Interactive Transparency — hover reveals calculation details.</li>
-        <li>Data-first Design — badges, charts & concise reports make credibility tangible.</li>
-      </ul>
+    <h3 style="margin-top:18px;color:var(--primary)">Why We Have a Past Partners Moving Slidebar</h3>
+    <p style="color:var(--muted)">Trust is best shown, not just told.</p>
+    <ul style="color:var(--muted);margin-left:18px">
+      <li>A moving slidebar of past partner logos serves as instant social proof — showing new visitors that reputable brands already trust Credify.</li>
+      <li>The motion draws attention without overpowering the main content, keeping the homepage dynamic yet professional.</li>
+      <li>It reassures both creators (“Brands are here”) and brands (“Creators worth trusting use this platform”).</li>
+    </ul>
 
-      <h3 style="margin-top:18px;color:var(--primary)">Design Mockup</h3>
-      <img src="images/ui_mockup.png" alt="ui mockup" style="width:100%;border-radius:12px;margin-top:10px">
-      
-      <h3 style="margin-top:18px;color:var(--primary)">Team</h3>
-      <table class="table">
-        <thead><tr><th>Name</th><th>Role</th><th>LinkedIn</th></tr></thead>
-        <tbody>
-          <tr><td>Aditya Vegad</td><td>Founder</td><td><a href="#" style="color:var(--primary)">LinkedIn</a></td></tr>
-          <tr><td>Jane Smith</td><td>Data Scientist</td><td><a href="#" style="color:var(--primary)">LinkedIn</a></td></tr>
-        </tbody>
-      </table>
-    </div>
+    <h3 style="margin-top:18px;color:var(--primary)">Why We Have a Separate Leaderboard Tab</h3>
+    <p style="color:var(--muted)">The leaderboard is more than a ranking — it’s a recognition platform:</p>
+    <ul style="color:var(--muted);margin-left:18px">
+      <li>Gamification – Motivates creators to improve their metrics.</li>
+      <li>Brand Efficiency – Gives brands a quick way to find high-credibility creators.</li>
+      <li>Community Building – Public recognition builds a healthy competitive spirit.</li>
+      <li>Focus – Keeping it in a separate tab ensures the leaderboard doesn’t overshadow the broader purpose of credibility building.</li>
+    </ul>
+
+    <h3 style="margin-top:18px;color:var(--primary)">Why We Highlight the Top 3 Profiles</h3>
+    <p style="color:var(--muted)">In the leaderboard, the top 3 profiles get special focus because:</p>
+    <ul style="color:var(--muted);margin-left:18px">
+      <li>Visual Impact – Larger, prominent display captures attention instantly.</li>
+      <li>Aspirational Value – Shows others exactly what success looks like on Credify.</li>
+      <li>Fast Brand Decisions – Brands in a hurry can start with the top 3.</li>
+      <li>Prestige – Being in the top 3 becomes a badge of honour.</li>
+    </ul>
+
+    <h3 style="margin-top:18px;color:var(--primary)">Why We Provide Detailed Reports Without Revealing the Formula</h3>
+    <p style="color:var(--muted)">Our scoring system is proprietary — keeping the exact formula secret prevents manipulation and protects our intellectual property. However, we also believe in actionable transparency:</p>
+    <ul style="color:var(--muted);margin-left:18px">
+      <li>We share category-level scores (e.g., Engagement Quality, Audience Authenticity, Content Consistency, Brand Fit) so both brands and creators know where strengths and weaknesses lie.</li>
+      <li>We do not reveal the exact weights or calculations, ensuring fairness.</li>
+      <li>For Brands – They can see whether a creator’s audience is genuine, their content is consistent, and their engagement is high.</li>
+      <li>For Creators – They get clear feedback on what to improve without being able to “game the system.”</li>
+    </ul>
+    <p style="color:var(--muted)">Example report format:</p>
+    <ul style="color:var(--muted);margin-left:18px">
+      <li>Engagement Quality – 7.8/10 (Strong)</li>
+      <li>Audience Authenticity – 6.4/10 (Needs Improvement)</li>
+      <li>Content Consistency – 8.2/10 (Excellent)</li>
+      <li>Brand Fit – 7.0/10 (Good)</li>
+    </ul>
+    <p style="color:var(--muted)">This approach builds trust while protecting the integrity of the score.</p>
+
+    <h3 style="margin-top:18px;color:var(--primary)">Our Philosophy</h3>
+    <p style="color:var(--muted)">Credibility is Currency. We stand for:</p>
+    <ul style="color:var(--muted);margin-left:18px">
+      <li>Transparency over secrecy – Show the factors, not just the score.</li>
+      <li>Empowerment over gatekeeping – Give creators the tools to grow.</li>
+      <li>Authenticity over hype – Reward real engagement, not inflated stats.</li>
+    </ul>
+    <p style="color:var(--muted)">Our mission is to become the global standard of trust in the creator economy — where credibility is measurable, visual, and valued.</p>
 
     <div class="nav-row" style="margin-top:18px">
       <a class="btn secondary" href="about.html">← Previous</a>
@@ -60,8 +109,5 @@
   </main>
 
   <footer class="footer"><small>© 2025 CREDIFY</small></footer>
-  
-
 </body>
 </html>
-
