--- a/about.html
+++ b/about.html
@@ -6,6 +6,15 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" type="image/png" sizes="32x32" href="logo-removebg-preview.png">
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-J58DXQJ170"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-J58DXQJ170');
+</script>
 </head>
 <body>
   <header class="header">
@@ -48,3 +57,4 @@
 </html>
 
   
+
