--- a/brands.html
+++ b/brands.html
@@ -6,6 +6,15 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" href="logo-removebg-preview.png" sizes="20x20" type="image/png">
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-FF9S7Z8M04"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-FF9S7Z8M04');
+</script>
 </head>
 <body>
   <header class="header">
@@ -115,5 +124,6 @@
 </script>
 </body>
 </html>
+
 
 
