--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <h1 class="h-hero">Your Credibility, Measured & Made Visible</h1>
       <p class="lead">We calculate your Social Credibility Score so brands know exactly who to trust — and creators know exactly how to grow.</p>
       <div class="cta-row">
-        <a class="btn" href="calculate.html">Calculate Score</a>
+        <a class="btn" href="calculate1.html">Calculate Score</a>
         <a class="btn secondary" href="profile.html">View Profile Template</a>
       </div>
     </section>
@@ -115,5 +115,6 @@
 
 </body>
 </html>
+
 
 
