--- a/profile.html
+++ b/profile.html
@@ -1,6 +1,15 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-FF9S7Z8M04"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-FF9S7Z8M04');
+</script>
   <meta charset="utf-8">
   <title>CREDIFY — Profile</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -166,6 +175,7 @@
   <script src="profile.js" defer></script>
 </body>
 </html>
+
 
 
 
