--- a/philosophy.html
+++ b/philosophy.html
@@ -3,8 +3,173 @@
 <head>
   <meta charset="utf-8">
   <title>CREDIFY — Philosophy</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link rel="stylesheet" href="styles.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- Embedded Styles -->
+  <style>
+    :root {
+      --primary: #0077cc;
+      --muted: #555;
+      --bg-light: #fff;
+      --accent-green: #28a745;
+    }
+
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      background: var(--bg-light);
+      color: var(--muted);
+      line-height: 1.6;
+    }
+
+    header.header {
+      background: var(--bg-light);
+      padding: 12px 20px;
+      border-bottom: 1px solid #ddd;
+    }
+
+    nav.nav {
+      display: flex;
+      align-items: center;
+      gap: 16px;
+      flex-wrap: wrap;
+    }
+
+    nav.nav a {
+      text-decoration: none;
+      color: var(--primary);
+      font-weight: 500;
+    }
+
+    nav.nav a:hover {
+      text-decoration: underline;
+    }
+
+    main.container {
+      max-width: 900px;
+      margin: auto;
+      padding: 20px;
+    }
+
+    h2 {
+      color: var(--primary);
+      margin-bottom: 10px;
+    }
+
+    .section-title {
+      margin-top: 24px;
+      color: var(--primary);
+    }
+
+    .section-text {
+      color: var(--muted);
+    }
+
+    .section-list {
+      margin-left: 18px;
+      color: var(--muted);
+    }
+
+    .section-list li {
+      margin-bottom: 6px;
+    }
+
+    .btn {
+      display: inline-block;
+      padding: 8px 16px;
+      background: var(--primary);
+      color: white;
+      text-decoration: none;
+      border-radius: 4px;
+      transition: background 0.2s ease;
+    }
+
+    .btn:hover {
+      background: #005fa3;
+    }
+
+    .btn.secondary {
+      background: #ccc;
+      color: black;
+    }
+
+    .btn.secondary:hover {
+      background: #aaa;
+    }
+
+    .nav-row {
+      display: flex;
+      justify-content: space-between;
+      margin-top: 24px;
+      flex-wrap: wrap;
+    }
+
+    footer.footer {
+      text-align: center;
+      padding: 12px;
+      border-top: 1px solid #ddd;
+      font-size: 0.9em;
+      color: var(--muted);
+      margin-top: 40px;
+    }
+
+    /* Table Styles */
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 16px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.05);
+      overflow: hidden;
+      border-radius: 6px;
+    }
+
+    table th, table td {
+      border: 1px solid #eee;
+      padding: 10px;
+      text-align: left;
+    }
+
+    table th {
+      background: var(--primary);
+      color: white;
+      font-weight: 600;
+    }
+
+    table tr:nth-child(even) {
+      background: #f9f9f9;
+    }
+
+    /* Responsive Tables */
+    @media (max-width: 600px) {
+      table, thead, tbody, th, td, tr {
+        display: block;
+        width: 100%;
+      }
+      table tr {
+        margin-bottom: 12px;
+        border: 1px solid #ddd;
+        border-radius: 6px;
+        padding: 6px;
+      }
+      table td {
+        border: none;
+        position: relative;
+        padding-left: 50%;
+        text-align: left;
+      }
+      table td::before {
+        content: attr(data-label);
+        position: absolute;
+        left: 12px;
+        top: 8px;
+        font-weight: bold;
+        color: var(--primary);
+      }
+      table th {
+        display: none;
+      }
+    }
+  </style>
 </head>
 <body>
   <header class="header">
@@ -20,89 +185,65 @@
 
   <main class="container">
     <h2>Behind the Design – The Credify Story</h2>
-    
-    <h3 style="margin-top:18px;color:var(--primary)">The Idea</h3>
-    <p style="color:var(--muted)">In today’s digital economy, credibility is currency. Brands want to know exactly which creators they can trust, and creators want to prove their worth in a way that is measurable and recognised. Credify bridges this gap by calculating a Social Credibility Score based on real engagement, content quality, and authenticity — and making it visible to both creators and brands.</p>
 
-    <h3 style="margin-top:18px;color:var(--primary)">Why We Designed the Website This Way</h3>
-    <p style="color:var(--muted)">Every element of our site is intentional. Our design goals were:</p>
-    <ul style="color:var(--muted);margin-left:18px">
-      <li>Minimalist Layout – We want users to focus on their score and insights, not be distracted by clutter.</li>
-      <li>Clean Typography & Plenty of White Space – Easier reading, more trust.</li>
-      <li>Interactive Transparency – Hover effects and tooltips explain each metric without overloading the page.</li>
-      <li>Data-First Design – Badges, charts, and progress bars make credibility tangible.</li>
-    </ul>
+    <!-- Stakeholder Table -->
+    <h3 class="section-title">Stakeholders</h3>
+    <p class="section-text">Our platform benefits multiple stakeholders. Here’s how:</p>
+    <table>
+      <thead>
+        <tr>
+          <th>Stakeholder</th>
+          <th>Role</th>
+          <th>Benefit</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td data-label="Stakeholder">Credify</td>
+          <td data-label="Role">Score Evaluator</td>
+          <td data-label="Benefit">Establishes credibility scoring standards</td>
+        </tr>
+        <tr>
+          <td data-label="Stakeholder">Influencer</td>
+          <td data-label="Role">Score Holder</td>
+          <td data-label="Benefit">Gets insights to improve credibility and attract brands</td>
+        </tr>
+        <tr>
+          <td data-label="Stakeholder">Brand</td>
+          <td data-label="Role">Score Beneficiary</td>
+          <td data-label="Benefit">Identifies trustworthy influencers for collaborations</td>
+        </tr>
+      </tbody>
+    </table>
 
-    <h3 style="margin-top:18px;color:var(--primary)">Our Colour Theme</h3>
-    <p style="color:var(--muted)">Our colours aren’t just for looks — they communicate what we stand for:</p>
-    <ul style="color:var(--muted);margin-left:18px">
-      <li>Blue – Trust, stability, reliability — the foundation of our credibility scoring system.</li>
-      <li>White – Transparency and openness — every score is backed by verifiable data.</li>
-      <li>Green Accents – Growth and opportunity — representing the collaborations and brand deals our users can achieve.</li>
-    </ul>
-    <p style="color:var(--muted)">We avoided overly bright or chaotic palettes because credibility is built on clarity and confidence, not noise.</p>
+    <!-- The rest of your sections (unchanged) -->
+    <h3 class="section-title">The Idea</h3>
+    <p class="section-text">In today’s digital economy, credibility is currency. Brands want to know exactly which creators they can trust, and creators want to prove their worth in a way that is measurable and recognised. Credify bridges this gap by calculating a Social Credibility Score based on real engagement, content quality, and authenticity — and making it visible to both creators and brands.</p>
 
-    <h3 style="margin-top:18px;color:var(--primary)">Our Logo</h3>
-    <p style="color:var(--muted)">Our logo tells a story:</p>
-    <ul style="color:var(--muted);margin-left:18px">
-      <li>The segmented circular ring represents measurement, progress, and the range of credibility from low to high.</li>
-      <li>The gradient shift (red/orange to green) visualises improvement — every creator can move upward with authentic engagement.</li>
-      <li>The green “CREDIFY” text symbolises the ultimate goal: growth built on trust.</li>
-    </ul>
+    <!-- ... [KEEP YOUR EXISTING SECTIONS HERE as in previous code] ... -->
 
-    <h3 style="margin-top:18px;color:var(--primary)">Why We Have a Past Partners Moving Slidebar</h3>
-    <p style="color:var(--muted)">Trust is best shown, not just told.</p>
-    <ul style="color:var(--muted);margin-left:18px">
-      <li>A moving slidebar of past partner logos serves as instant social proof — showing new visitors that reputable brands already trust Credify.</li>
-      <li>The motion draws attention without overpowering the main content, keeping the homepage dynamic yet professional.</li>
-      <li>It reassures both creators (“Brands are here”) and brands (“Creators worth trusting use this platform”).</li>
-    </ul>
+    <!-- Team Table -->
+    <h3 class="section-title">This Is Us</h3>
+    <table>
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Roll Number</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td data-label="Name">Priyesh Pansari</td>
+          <td data-label="Roll Number">IPM57M068</td>
+        </tr>
+        <tr>
+          <td data-label="Name">Aditya Vegad</td>
+          <td data-label="Roll Number">IPM57M059</td>
+        </tr>
+      </tbody>
+    </table>
 
-    <h3 style="margin-top:18px;color:var(--primary)">Why We Have a Separate Leaderboard Tab</h3>
-    <p style="color:var(--muted)">The leaderboard is more than a ranking — it’s a recognition platform:</p>
-    <ul style="color:var(--muted);margin-left:18px">
-      <li>Gamification – Motivates creators to improve their metrics.</li>
-      <li>Brand Efficiency – Gives brands a quick way to find high-credibility creators.</li>
-      <li>Community Building – Public recognition builds a healthy competitive spirit.</li>
-      <li>Focus – Keeping it in a separate tab ensures the leaderboard doesn’t overshadow the broader purpose of credibility building.</li>
-    </ul>
-
-    <h3 style="margin-top:18px;color:var(--primary)">Why We Highlight the Top 3 Profiles</h3>
-    <p style="color:var(--muted)">In the leaderboard, the top 3 profiles get special focus because:</p>
-    <ul style="color:var(--muted);margin-left:18px">
-      <li>Visual Impact – Larger, prominent display captures attention instantly.</li>
-      <li>Aspirational Value – Shows others exactly what success looks like on Credify.</li>
-      <li>Fast Brand Decisions – Brands in a hurry can start with the top 3.</li>
-      <li>Prestige – Being in the top 3 becomes a badge of honour.</li>
-    </ul>
-
-    <h3 style="margin-top:18px;color:var(--primary)">Why We Provide Detailed Reports Without Revealing the Formula</h3>
-    <p style="color:var(--muted)">Our scoring system is proprietary — keeping the exact formula secret prevents manipulation and protects our intellectual property. However, we also believe in actionable transparency:</p>
-    <ul style="color:var(--muted);margin-left:18px">
-      <li>We share category-level scores (e.g., Engagement Quality, Audience Authenticity, Content Consistency, Brand Fit) so both brands and creators know where strengths and weaknesses lie.</li>
-      <li>We do not reveal the exact weights or calculations, ensuring fairness.</li>
-      <li>For Brands – They can see whether a creator’s audience is genuine, their content is consistent, and their engagement is high.</li>
-      <li>For Creators – They get clear feedback on what to improve without being able to “game the system.”</li>
-    </ul>
-    <p style="color:var(--muted)">Example report format:</p>
-    <ul style="color:var(--muted);margin-left:18px">
-      <li>Engagement Quality – 7.8/10 (Strong)</li>
-      <li>Audience Authenticity – 6.4/10 (Needs Improvement)</li>
-      <li>Content Consistency – 8.2/10 (Excellent)</li>
-      <li>Brand Fit – 7.0/10 (Good)</li>
-    </ul>
-    <p style="color:var(--muted)">This approach builds trust while protecting the integrity of the score.</p>
-
-    <h3 style="margin-top:18px;color:var(--primary)">Our Philosophy</h3>
-    <p style="color:var(--muted)">Credibility is Currency. We stand for:</p>
-    <ul style="color:var(--muted);margin-left:18px">
-      <li>Transparency over secrecy – Show the factors, not just the score.</li>
-      <li>Empowerment over gatekeeping – Give creators the tools to grow.</li>
-      <li>Authenticity over hype – Reward real engagement, not inflated stats.</li>
-    </ul>
-    <p style="color:var(--muted)">Our mission is to become the global standard of trust in the creator economy — where credibility is measurable, visual, and valued.</p>
-
-    <div class="nav-row" style="margin-top:18px">
+    <div class="nav-row">
       <a class="btn secondary" href="about.html">← Previous</a>
       <a class="btn" href="index.html">Back to Home →</a>
     </div>
