--- a/philosophy.html
+++ b/philosophy.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>CREDIFY — Philosophy</title>
+  <title>CREDIFY — Behind the Design</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- Embedded Styles -->
   <style>
     :root {
       --primary: #0077cc;
@@ -56,22 +55,17 @@
       margin-bottom: 10px;
     }
 
-    .section-title {
-      margin-top: 24px;
+    h3 {
       color: var(--primary);
+      margin-top: 24px;
     }
 
-    .section-text {
+    p, li {
       color: var(--muted);
     }
 
-    .section-list {
+    ul {
       margin-left: 18px;
-      color: var(--muted);
-    }
-
-    .section-list li {
-      margin-bottom: 6px;
     }
 
     .btn {
@@ -187,8 +181,8 @@
     <h2>Behind the Design – The Credify Story</h2>
 
     <!-- Stakeholder Table -->
-    <h3 class="section-title">Stakeholders</h3>
-    <p class="section-text">Our platform benefits multiple stakeholders. Here’s how:</p>
+    <h3>Stakeholders</h3>
+    <p>Our platform benefits multiple stakeholders. Here’s how:</p>
     <table>
       <thead>
         <tr>
@@ -216,14 +210,66 @@
       </tbody>
     </table>
 
-    <!-- The rest of your sections (unchanged) -->
-    <h3 class="section-title">The Idea</h3>
-    <p class="section-text">In today’s digital economy, credibility is currency. Brands want to know exactly which creators they can trust, and creators want to prove their worth in a way that is measurable and recognised. Credify bridges this gap by calculating a Social Credibility Score based on real engagement, content quality, and authenticity — and making it visible to both creators and brands.</p>
+    <!-- Your Original Content -->
+    <h3>The Idea</h3>
+    <p>In today’s digital economy, credibility is currency. Brands want to know exactly which creators they can trust, and creators want to prove their worth in a way that is measurable and recognised. Credify bridges this gap by calculating a Social Credibility Score based on real engagement, content quality, and authenticity — and making it visible to both creators and brands.</p>
 
-    <!-- ... [KEEP YOUR EXISTING SECTIONS HERE as in previous code] ... -->
+    <h3>Why We Designed the Website This Way</h3>
+    <ul>
+      <li><strong>Minimalist Layout</strong> – Focus on score and insights without distraction.</li>
+      <li><strong>Clean Typography & White Space</strong> – Easier reading, builds trust.</li>
+      <li><strong>Interactive Transparency</strong> – Hover effects and tooltips explain metrics without overload.</li>
+      <li><strong>Data-First Design</strong> – Badges, charts, and progress bars make credibility tangible.</li>
+    </ul>
+
+    <h3>Our Colour Theme</h3>
+    <p><strong>Blue</strong> – Trust, stability, reliability.<br>
+       <strong>White</strong> – Transparency and openness.<br>
+       <strong>Green Accents</strong> – Growth and opportunity.</p>
+    <p>We avoided overly bright or chaotic palettes because credibility is built on clarity and confidence, not noise.</p>
+
+    <h3>Our Logo</h3>
+    <p>The segmented circular ring represents measurement, progress, and the range of credibility. The gradient shift visualises improvement. The green “CREDIFY” text symbolises growth built on trust.</p>
+
+    <h3>Why We Have a Past Partners Moving Slidebar</h3>
+    <p>Trust is best shown, not just told. A moving slidebar of partner logos provides instant social proof, draws attention without overpowering, and reassures both creators and brands.</p>
+
+    <h3>Why We Have a Separate Leaderboard Tab</h3>
+    <ul>
+      <li><strong>Gamification</strong> – Motivates creators.</li>
+      <li><strong>Brand Efficiency</strong> – Quick way for brands to find high-credibility creators.</li>
+      <li><strong>Community Building</strong> – Builds healthy competitive spirit.</li>
+      <li><strong>Focus</strong> – Keeps leaderboard from overshadowing main goal.</li>
+    </ul>
+
+    <h3>Why We Highlight the Top 3 Profiles</h3>
+    <ul>
+      <li><strong>Visual Impact</strong> – Instant attention.</li>
+      <li><strong>Aspirational Value</strong> – Shows what success looks like.</li>
+      <li><strong>Fast Brand Decisions</strong> – Brands can start with the top 3.</li>
+      <li><strong>Prestige</strong> – Being in top 3 is a badge of honour.</li>
+    </ul>
+
+    <h3>Why We Provide Detailed Reports Without Revealing the Formula</h3>
+    <p>We keep the scoring formula secret to prevent manipulation but share category-level scores so brands and creators know where they stand.</p>
+    <p>Example report:</p>
+    <ul>
+      <li>Engagement Quality – 7.8/10 (Strong)</li>
+      <li>Audience Authenticity – 6.4/10 (Needs Improvement)</li>
+      <li>Content Consistency – 8.2/10 (Excellent)</li>
+      <li>Brand Fit – 7.0/10 (Good)</li>
+    </ul>
+
+    <h3>Our Philosophy</h3>
+    <ul>
+      <li><strong>Transparency over secrecy</strong> – Show factors, not just scores.</li>
+      <li><strong>Empowerment over gatekeeping</strong> – Give creators tools to grow.</li>
+      <li><strong>Authenticity over hype</strong> – Reward real engagement.</li>
+    </ul>
+    <p>Our mission is to become the global standard of trust in the creator economy.</p>
 
     <!-- Team Table -->
-    <h3 class="section-title">This Is Us</h3>
+    <h3>This Is Us</h3>
     <table>
       <thead>
         <tr>
