--- a/about.html
+++ b/about.html
@@ -2,26 +2,98 @@
 <html lang="en">
 <head>
   <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-FF9S7Z8M04"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-FF9S7Z8M04"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
-  gtag('config', 'G-FF9S7Z8M04');
-</script>
+    gtag('config', 'G-FF9S7Z8M04');
+  </script>
   <meta charset="utf-8">
   <title>CREDIFY — About</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" type="image/png" sizes="32x32" href="logo-removebg-preview.png">
+  <style>
+    /* Basic container styling for content */
+    .container {
+      max-width: 900px;
+      margin: 12px auto;
+      padding: 0 16px;
+    }
+    
+    /* Styling for general tables */
+    .table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 10px;
+    }
+    .table th, .table td {
+      border: 1px solid #ddd;
+      padding: 8px;
+      text-align: left;
+    }
+    .table th {
+      background-color: var(--primary); /* Assuming 'var(--primary)' is defined in styles.css */
+      color: white;
+    }
+
+    /* Styling for navigation buttons */
+    .nav-row {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-top: 18px;
+    }
+    .btn {
+      padding: 8px 16px;
+      border-radius: 6px;
+      text-decoration: none;
+      font-weight: bold;
+      transition: background-color 0.3s;
+    }
+    .btn.secondary {
+      background-color: transparent;
+      color: var(--primary);
+      border: 1px solid var(--primary);
+    }
+    .btn.secondary:hover {
+      background-color: rgba(0, 123, 255, 0.1); /* Light hover effect for secondary button */
+    }
+
+    /* Responsive adjustments for the map */
+    .map-container {
+      overflow: hidden;
+      padding-bottom: 56.25%; /* 16:9 Aspect Ratio */
+      position: relative;
+      height: 0;
+      margin-top: 12px;
+      border-radius: 8px; /* Rounded corners for the map */
+    }
+    .map-container iframe {
+      left: 0;
+      top: 0;
+      height: 100%;
+      width: 100%;
+      position: absolute;
+      border: 0; /* Remove iframe border */
+    }
+
+    /* Adjust footer position for better flow with added content */
+    footer.footer {
+      position: relative; /* Change from fixed to relative */
+      margin-top: 20px; /* Add some space above the footer */
+      bottom: auto; /* Remove fixed bottom */
+    }
+  </style>
 </head>
 <body>
   <header class="header">
     <nav class="nav">
       <a href="index.html"><img src="logo-removebg-preview.png" alt="logo" style="height:26px"></a>
       <a href="index.html">Home</a>
-      <a href="calculate.html">Calculate Score</a>
+      <a href="calculate1.html">Calculate Score</a>
       <a href="profile.html">LeaderBoard</a>
       <a href="brands.html">For Brands</a>
       <a href="about.html">About Us</a>
@@ -42,6 +114,25 @@
         <li>Empowerment over gatekeeping — give creators tools to grow.</li>
         <li>Authenticity over hype — reward real audiences.</li>
       </ul>
+
+      <h4 style="color:var(--primary);margin-top:12px">Our Mission and Vision</h4>
+      <p style="color:var(--muted)">Our mission is to become the global standard of trust in the creator economy, where credibility is measurable, visual, and valued. We envision a world where authentic engagement is recognized and rewarded, fostering a more transparent and confident ecosystem for creators and brands alike.</p>
+
+
+      <h3 style="margin-top:18px;color:var(--primary)">Our Team</h3>
+      <table class="table">
+        <thead><tr><th>Name</th><th>Role</th><th>LinkedIn</th></tr></thead>
+        <tbody>
+          <tr><td>Priyesh Pansari</td><td>Founder</td><td><a href="https://www.linkedin.com/in/theppriyesh" style="color:var(--primary)" target="_blank">LinkedIn</a></td></tr>
+          <tr><td>Aditya Vegad</td><td>Founder</td><td><a href="https://www.linkedin.com/in/aditya-vegad/" style="color:var(--primary)" target="_blank">LinkedIn</a></td></tr>
+        </tbody>
+      </table>
+
+      <h3 style="margin-top:18px;color:var(--primary)">Our Location</h3>
+      <div class="map-container">
+        <!-- Google Map Embed - Centered on our office location -->
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3782.9723224855794!2d73.8378771149495!3d18.52838398740529!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2bf23e9a4f6d7%3A0xc4a3d6f1c4a0e2d!2sCredify%20Office!5e0!3m2!1sen!2sin!4v1700000000000!5m2!1sen!2sin" allowfullscreen="" loading="lazy"></iframe>
+      </div>
     </section>
 
     <div class="nav-row">
@@ -50,13 +141,8 @@
     </div>
   </main>
 
-  <footer class="footer" style="bottom: 0;position: fixed;">
+  <footer class="footer">
     <small>© 2025 CREDIFY — Trust. Transparency. Empowerment.</small>
   </footer>
 </body>
 </html>
-
-  
-
-
-
