--- a/philosophy.html
+++ b/philosophy.html
@@ -223,7 +223,7 @@
         </tr>
         <tr>
           <td>Framework Use: Bootstrap (or approved alternative)</td>
-          <td>No</td>
+          <td>Yes</td>
         </tr>
         <tr>
           <td>Accessible Forms & Validation</td>
@@ -364,3 +364,4 @@
   <footer class="footer"><small>© 2025 CREDIFY</small></footer>
 </body>
 </html>
+
