--- a/hiddenpage.html
+++ b/hiddenpage.html
@@ -261,7 +261,7 @@
         </tr>
         <tr>
           <td>Consumer Profile: Who are you catering to?</td>
-          <td>No</td>
+          <td>Yes</td>
         </tr>
         <tr>
           <td>Design Philosophy: Written in the Hidden page</td>
@@ -364,4 +364,5 @@
   <footer class="footer"><small>© 2025 CREDIFY</small></footer>
 </body>
 </html>
+
 
