--- a/hiddenpage.html
+++ b/hiddenpage.html
@@ -328,7 +328,7 @@
         </tr>
         <tr>
           <td>Social Buttons: Implemented</td>
-          <td>No</td>
+          <td>Yes</td>
         </tr>
         <tr>
           <td rowspan="3">🚀 Hosting & Deployment</td>
@@ -364,5 +364,6 @@
   <footer class="footer"><small>© 2025 CREDIFY</small></footer>
 </body>
 </html>
+
 
 
